--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,10 +18,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - name: Install dependencies
+      - name: Install requirments dependencies
         uses: py-actions/py-dependency-install@v4
         with:
           path: "requirments.txt"
+      - name: Install flake and pytest
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
